guestbook/chart/gateway/hola-mundo-vs.yaml
# Este VirtualService reemplaza a los VirtualService individuales de las versiones.
# Se encarga de enrutar el tráfico de forma inteligente.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hola-mundo-traffic-splitter
  # El namespace es importante. Podrías colocarlo en un namespace dedicado
  # o en uno que ambas aplicaciones puedan referenciar, como el 'default'.
  namespace: default
spec:
  hosts:
    - "hola-mundo.info"
  gateways:
    - hola-mundo-gateway
  http:
    - route:
        # Aquí se definen las reglas de enrutamiento
        - destination:
            host: hola-mundo.hola-mundo-v1.svc.cluster.local
            port:
              number: 80
          weight: 50
        - destination:
            host: hola-mundo.hola-mundo-v2.svc.cluster.local
            port:
              number: 80
          weight: 50
